# sdk-python

./: .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  demoStorage.py  pyproject.toml  ruff.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: TODO.md  authors.md  changelog.md  conf.py  configuration.md  contributing.md  error_handling.md  getting_started.md  index.md  license.md  logging.md  readme.md  requirements.txt
docs/examples/: advanced_examples.md  basic_examples.md  index.md
docs/services/: assistant.md  configuration.md  graphs.md  index.md
docs/usage/: ApiErrorEnum.md  ApiErrorResponse.md  AuthApi.md  BucketCategoryEnum.md  BucketMetadata.md  Collection.md  CompressionTypeEnum.md  ConfigurationApi.md  Credential.md  DataCatalogTypeEnum.md  DataRepository.md  EmbeddingsGeneratorEnum.md  EmbeddingsRule.md  EncryptionKey.md  GraphRepository.md  GraphRepositoryTypeEnum.md  HTTPValidationError.md  LocationInner.md  MetadataRule.md  Node.md  ObjectLock.md  ObjectWriteModeEnum.md  SoftwareInstanceTypeEnum.md  StoragePool.md  TenantMetadata.md  Token.md  UserMaster.md  ValidationError.md  ValidationErrorLocInner.md  VectorRepository.md  VectorRepositoryTypeEnum.md  ViewEndpoint.md  WebhookEvent.md  WebhookEventTypeEnum.md  WebhookRule.md  WebhookTarget.md
docs/user_guide/: authentication.md  basic_usage.md  index.md  installation.md
examples/: demoAssistant.py  demoConfiguration.py  demoCrawler.py  demoDirector.py  demoHealthcheck.py  demoLexi.py  demoModels.py  demoOrchestrator.py  demoProcessor.py  demoStorage.py  demoVector.py  example.py
src/view_sdk/: __init__.py  base.py  exceptions.py  mixins.py  sdk_configuration.py  sdk_logging.py
src/view_sdk/enums/: api_error_enum.py  api_version_enum.py  bucket_category_enum.py  compression_type_enum.py  crawl_state_enum.py  data_catalog_type_enum.py  data_repository_type_enum.py  data_type_enum.py  database_type_enum.py  document_type_enum.py  embeddings_generator_enum.py  enumeration_order_enum.py  graph_node_type_enum.py  graph_repository_type_enum.py  http_method_enum.py  model_api_type_enum.py  object_write_mode_enum.py  pdf_mode_enum.py  schedule_interval_enum.py  schema_condition_enum.py  search_condition_enum.py  semantic_cell_type_enum.py  software_instance_type_enum.py  step_result_enum.py  step_runtime_enum.py  storage_type_enum.py  trigger_type_enum.py  vector_repository_type_enum.py  vector_search_type_enum.py  (+2 more)
src/viewio_sdk/: __init__.py  api_client.py  api_response.py  configuration.py  exceptions.py  rest.py
tests/: conftest.py  test_api_client.py  test_api_error_response.py  test_auth_api.py  test_base.py  test_configuration.py  test_exceptions.py  test_mixins.py  test_rest_client.py  test_sdk_logging.py
tests/bucket/: bucket_http_info_test.py  bucket_test.py  bucket_without_preload_content_test.py
tests/collection/: collection_http_info_test.py  collection_test.py  collection_without_preload_content_test.py
tests/credential/: credential_http_info_test.py  credential_test.py  credential_without_preload_content_test.py
tests/data_repository/: data_repository_http_info_test.py  data_repository_test.py  data_repository_without_preload_content_test.py
tests/embeddings_rule/: embeddings_rule_http_info_test.py  embeddings_rule_test.py  embeddings_rule_without_preload_content_test.py
tests/encryption_key/: encryption_key_http_info_test.py  encryption_key_test.py  encryption_key_without_preload_content_test.py
tests/graph_repository/: graph_repository_http_info_test.py  graph_repository_test.py  graph_repository_without_preload_content_test.py
tests/metadata_rule/: metadata_rule_http_info_test.py  metadata_rule_test.py  metadata_rule_without_preload_content_test.py
tests/node/: node_http_info_test.py  node_test.py  node_without_preload_content_test.py
tests/object_lock/: object_lock_http_info_test.py  object_lock_test.py  object_lock_without_preload_content_test.py
tests/pool/: pool_http_info_test.py  pool_test.py  pool_without_preload_content_test.py
tests/tenant/: tenant_http_info_test.py  tenant_test.py  tenant_without_preload_content_test.py
tests/test_models/: test_account.py  test_acl_entry.py  test_bucket.py  test_collection.py  test_conversation_models.py  test_credentials.py  test_data_node.py  test_data_repository.py  test_embeddings_result.py  test_embeddings_rule.py  test_encryptionkey.py  test_graph.py  test_graph_search_result.py  test_metadata_rule.py  test_model_configuration_model.py  test_model_endpoint_model.py  test_node.py  test_object_lock.py  test_pool.py  test_semantic_cell_model.py  test_source_document.py  test_source_document_statistics.py  test_step_metadata.py  test_tenant.py  test_udr_document.py  test_usermaster.py  test_vector_repository.py  test_view_endpoint.py  test_webhook_event.py  test_webhook_rule.py  test_webhook_target.py
tests/test_resources/: test_assistant.py  test_authentication.py  test_crawler.py  test_data_flow_logs.py  test_data_flows.py  test_embeddings.py  test_graph_repositories.py  test_graphs.py  test_health_check.py  test_lexi_collections.py  test_model_configurations.py  test_model_endpoints.py  test_semantic_cells.py  test_storage_buckets.py  test_storage_multipart_uploads.py  test_storage_object.py
tests/user/: user_http_info_test.py  user_test.py  user_without_preload_content_test.py
tests/vector_repository/: vector_repository_http_info_test.py  vector_repository_test.py  vector_repository_without_preload_content_test.py
tests/view_endpoint/: view_endpoint_http_info_test.py  view_endpoint_test.py  view_endpoint_without_preload_content_test.py
tests/webhook_event/: webhook_event_http_info_test.py  webhook_event_test.py  webhook_event_without_preload_content_test.py
tests/webhook_rule/: webhook_rule_http_info_test.py  webhook_rule_test.py  webhook_rule_without_preload_content_test.py
tests/webhook_target/: webhook_target_http_info_test.py  webhook_target_test.py  webhook_target_without_preload_content_test.py
(+255 files in other folders)
