[metadata]
name = python_sdk_viewio
description = View.io Python SDK
author = <author name>
author_email = <author email>
license = MIT
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/view-io/sdk-python

project_urls =
    Documentation = https://docs.view.io/

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Framework :: tox
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Information Analysis

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata; python_version<"3.8"
    httpx
    pydantic[email] >= 2.5.0

[options.packages.find]
where = src
exclude =
    tests

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    python-dotenv

[tool:pytest]
addopts =
    --cov view_sdk --cov-report term-missing
    --verbose
    --cov-report html
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
no_vcs = 1
formats = bdist_wheel


[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.5
package = view_sdk
extensions =
    gitlab
    markdown
    no_skeleton
    pre_commit
